# happy_Robot

./: .gitignore  README.md  docker-compose.yml
.githooks/: prepare-commit-msg
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  requirements.txt
backend/app/: auth.py  call_record_utils.py  database.py  main.py  normalize.py  seed_loads.json  settings.py  time_utils.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/integrations/: happyrobot.py
backend/app/routers/: fmcsa.py  loads.py  metrics.py  voice.py  webhooks.py
backend/app/services/: platform_sync.py  run_reconstruction.py
backend/app/utils/: call_records.py  normalize.py  search.py  time.py
caddy/: Caddyfile  Caddyfile.local
deliverables/: acme-logistics-build-description.md  email-to-carlos-becker.txt
docs/: architecture.md  demo-script.md  deployment.md  runbook.md  security.md  voice-agent-prompt.md  workflow-setup.md
evals/: README.md  report.md  requirements.txt  run_evals.py  scenarios.yaml
frontend/: .env.example  Dockerfile  fly.toml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  react-simple-maps.d.ts
frontend/src/hooks/: useDashboardData.ts  useLiveMode.ts
mcp/: .env.example  Dockerfile  README.md  __init__.py  __main__.py  bootstrap.py  cache.py  client.py  config.py  models.py  pyproject.toml  rate_limit.py  requirements.txt  server.py  stdio_server.py
mcp/server/: __init__.py  __main__.py
mcp/tests/: conftest.py  test_client.py  test_server.py
scripts/: smoke.sh
(+25 files in other folders)
