[project]
name = "carrier-sales-mcp"
version = "0.1.0"
description = "MCP server exposing read-only Carrier Sales API tools for Claude and other MCP clients"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0,<2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.scripts]
carrier-sales-mcp = "server:main"
