[project]
name = "carrier-sales-mcp"
version = "0.2.0"
description = "MCP server exposing read-only Carrier Sales API tools for Claude and other MCP clients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0,<2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
carrier-sales-mcp = "stdio_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
